@@ -56,6 +56,7 @@ __PACKAGE__->meta->columns(
   datev_check_on_sales_invoice              => { type => 'boolean', default => 'true' },
   datev_export_format                       => { type => 'enum', check_in => [ 'cp1252', 'cp1252-translit', 'utf-8' ], db_type => 'datev_export_format_enum', default => 'cp1252-translit' },
   delivery_date_interval                    => { type => 'integer', default => '0' },
+  deliverydate_on                           => { type => 'boolean', default => 'true' },
   disabled_price_sources                    => { type => 'array' },
   doc_delete_printfiles                     => { type => 'boolean', default => 'false' },
   doc_files                                 => { type => 'boolean', default => 'false' },
@@ -133,6 +134,7 @@ __PACKAGE__->meta->columns(
   purchase_order_show_delete                => { type => 'boolean', default => 'true' },
   quick_search_modules                      => { type => 'array' },
   reqdate_interval                          => { type => 'integer', default => '0' },
+  reqdate_on                                => { type => 'boolean', default => 'true' },
   require_transaction_description_ps        => { type => 'boolean', default => 'false', not_null => 1 },
   requirement_spec_section_order_part_id    => { type => 'integer' },
   revtrans                                  => { type => 'boolean', default => 'false' },
