@@ -1649,6 +1649,8 @@ $self->{texts} = {
   'If missing then the start date will be used.' => '',
   'If one or more space separated serial numbers are assigned in a sales invoice, match the charge number of the inventory item. Assumes that Serial Number and Charge Number have 1:1 relation. Otherwise throw a error message for the default sales invoice transfer.' => '',
   'If searching a part from a document and no part is found then offer to create a new part.' => '',
+  'If set to no the \'delivery date\' field for sales orders won\'t be set at all.' => '',
+  'If set to no the \'valid until\' field for sales quotation won\'t be set at all.' => '',
   'If the article type is set to \'mixed\' then a column called \'part_type\' or called \'pclass\' must be present.' => '',
   'If the automatic creation of invoices for fees and interest is switched on for a dunning level then the following accounts will be used for the invoice.' => '',
   'If the counted quantity differs more than this threshold from the quantity in the database, a warning will be shown. Set to 0 to switch of this feature.' => '',
@@ -2934,6 +2936,7 @@ $self->{texts} = {
   'Set (set to)'                => '',
   'Set all source and memo fields' => '',
   'Set count for one or more of the items to select them' => '',
+  'Set delivery date for Sales Orders' => '',
   'Set eMail text'              => '',
   'Set fields'                  => '',
   'Set lastcost'                => '',
@@ -2941,6 +2944,7 @@ $self->{texts} = {
   'Set the invoice duedate as the default execution date for SEPA export.' => '',
   'Set the invoice skonto date (if exists) as the default execution date for SEPA export.' => '',
   'Set to paid missing'         => '',
+  'Set valid until date for Sales Quotation' => '',
   'Settings'                    => '',
   'Setup Menu'                  => '',
   'Ship to (database ID)'       => '',
